Add unit and integration tests for OCR processing and public gateway functionality
- Implement DocumentOcrPropertiesTest to validate default properties and retry logic.
- Create DocumentOcrServiceTest for testing queueing, status retrieval, and retry mechanisms.
- Add DocumentOcrWorkerTest to ensure worker delegates processing correctly.
- Introduce OcrImagePreprocessorTest for validating image preprocessing logic.
- Develop PublicZimbabweDocumentOcrBenchmarkTest for benchmarking OCR against public documents.
- Establish e2e tests in global-setup.ts for Keycloak configuration and public-gateway.spec.ts for portal navigation and event handling.